--- a/Kindergarten/podfile
+++ b/Kindergarten/podfile
@@ -3,5 +3,6 @@ platform :ios, ‘9.0’
 target ‘Kindergarten’ do
 pod 'AFNetworking', '~> 3.0.0-beta.1'
 pod ‘SSZipArchive’
+pod 'MBProgressHUD', '~> 0.9.1'
 end
 
