add download manager

--- a/Kindergarten/podfile
+++ b/Kindergarten/podfile
@@ -4,5 +4,6 @@ target ‘Kindergarten’ do
 pod 'AFNetworking', '~> 3.0.0-beta.1'
 pod ‘SSZipArchive’
 pod 'MBProgressHUD', '~> 0.9.1'
+pod 'XMLDictionary'
 end
 
