--- a/Kindergarten/Kindergarten/Info.plist
+++ b/Kindergarten/Kindergarten/Info.plist
@@ -38,5 +38,10 @@
 	<array>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    <key>NSAppTransportSecurity</key>
+    <dict>
+        <key>NSAllowsArbitraryLoads</key>
+        <true/>
+    </dict>
 </dict>
 </plist>
